syntax = "proto3";

package packet;

message Vector3
{
  float x = 1;
  float y = 2;
  float z = 3;
}

message RoomUser
{
  int64 network_id = 1;
  Vector3 position = 2;
  string name = 3;
}

message Room
{
  int64 id = 1;
  string name = 2;
  int32 max_user_count = 3;
  int64 master_user_network_id = 4;
  repeated RoomUser room_users = 5;
}